crates/pina_cli/tests/snapshots/cli_snapshots__docs_index.snap
---
source: crates/pina_cli/tests/cli_snapshots.rs
assertion_line: 247
info:
  program: pina
  args:
    - docs
---
success: true
exit_code: 0
----- stdout -----
Bundled documentation topics:
  pina-idl         IDL extraction rules and supported Rust shapes
  pina-overview    framework concepts, crates, features, and workflows
  pina-validation  declarative rules, manual alternatives, and code generation

Run `pina docs <topic>` to open a topic.
Set PINA_TEMPLATES_DIR to load additional `<topic>.t.md` files.
For the agent skill, including installing it, run `pina skill`.

----- stderr -----
