crates/pina_cli/tests/snapshots/cli_snapshots__docs_unknown_topic_error.snap
---
source: crates/pina_cli/tests/cli_snapshots.rs
info:
  program: pina
  args:
    - docs
    - unknown-topic
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
[1m[31mError[39m[0m Topic `unknown-topic` not found.
Bundled topics:
  pina-idl         IDL extraction rules and supported Rust shapes
  pina-overview    framework concepts, crates, features, and workflows
  pina-validation  declarative rules, manual alternatives, and code generation
Set PINA_TEMPLATES_DIR to a directory containing `<topic>.t.md` to load custom docs.
