crates/pina_cli/tests/snapshots/cli_snapshots__explain_help.snap
---
source: crates/pina_cli/tests/cli_snapshots.rs
assertion_line: 214
info:
  program: pina
  args:
    - explain
    - "--help"
---
success: true
exit_code: 0
----- stdout -----
Explain why a transaction to the current program failed.

Reconstructs which `#[derive(Accounts)]` field and which rule most likely failed from the transaction (its account flags, error, and logs) and the program source, with `path:line` locations. The diagnosis runs off-chain, so programs keep their bare error codes and pay no size or compute units for it. A produced explanation exits 0, including for a transaction that succeeded; a fetch, file, or project failure exits 1.

Usage: pina explain [OPTIONS] <SIGNATURE|--transaction-file <PATH>>

Arguments:
  [SIGNATURE]
          Signature of the transaction to explain

Options:
      --transaction-file <PATH>
          Read a saved getTransaction result or JSON-RPC response instead of fetching

      --network <localnet|devnet|testnet|mainnet>
          Cluster to query. Defaults to localnet when fetching a signature

      --rpc-url <URL>
          Credential-free HTTP(S) JSON-RPC URL to query instead of a named network

  -p, --project <DIR>
          Directory inside the program project. Defaults to the current directory

      --json
          Emit a stable machine-readable JSON document

  -h, --help
          Print help (see a summary with '-h')

Examples:
  pina explain <SIGNATURE>
  pina explain <SIGNATURE> --network devnet
  pina explain <SIGNATURE> --rpc-url http://127.0.0.1:8899 --json
  pina explain --transaction-file ./failed.json
  pina explain --transaction-file ./failed.json --network devnet --project ./programs/counter

Confidence:
  confirmed: provable from the transaction alone (signer and writable flags, account counts, duplicate keys, known addresses).
  checked_against_current_state: fails against account state read after the transaction; the state may have changed since.
  possible: can return this error but needs runtime values (PDA seeds, argument rules, custom expressions).

Inputs:
  A signature is fetched with getTransaction at confirmed commitment. --transaction-file reads a saved getTransaction result or full JSON-RPC response and works offline; add --network or --rpc-url to also check rules against current account state.

Network safety:
  The default network is localnet. Pina never queries mainnet unless --network mainnet or --rpc-url names it. RPC URLs with credentials, query parameters, or fragments are rejected, plaintext http is accepted only for a loopback host, redirects are not followed, and no request is retried.

----- stderr -----
