crates/pina_cli/tests/snapshots/cli_snapshots__generate_help.snap
---
source: crates/pina_cli/tests/cli_snapshots.rs
info:
  program: pina
  args:
    - generate
    - "--help"
---
success: true
exit_code: 0
----- stdout -----
Generate configured clients for the current Pina program.

Discovers the project, refreshes its IDL, and generates only the selected client ecosystems. Repeat --client to override pina.toml. CPI-only and Rust-only generation do not invoke Node.js.

Usage: pina generate [OPTIONS]

Options:
  -p, --project <DIR>
          Directory inside the project to discover. Defaults to the current directory

      --client <LANGUAGE>
          Client ecosystem to generate. Repeat to override pina.toml

          Possible values:
          - cpi
          - rust
          - typescript
          - dart
          - cli-rust:   A clap-based Rust CLI application
          - cli-ts:     A cliffy-based TypeScript CLI application
          - cli-dart:   An args-based Dart CLI application

  -o, --output <DIR>
          Override the configured client output directory. Configured outputs stay inside the Git worktree; only this flag publishes outside it

      --mode <MODE>
          Override how existing client destinations are handled. Selecting `overwrite` is an operator decision: pina.toml cannot request it

          Possible values:
          - auto:      Create clients in empty destinations and update clients in existing ones
          - create:    Require an empty or nonexistent destination
          - update:    Require an existing, nonempty destination and preserve its scaffold
          - overwrite: Remove the complete destination before generating it again

      --no-scaffold
          Generate source files without package manifests or crate entrypoints

      --npx <COMMAND>
          Executable used to invoke JavaScript or Dart renderers. Defaults to npx, which resolves the pinned packages isolated from the project; pass a Node executable to resolve packages from the project on purpose

  -h, --help
          Print help (see a summary with '-h')

Examples:
  pina generate
  pina generate --client rust
  pina generate --client typescript --client dart
  pina generate --project ./programs/counter --output ./generated
  pina generate --mode update --no-scaffold

Configuration:
  [clients]
  output = "clients"
  languages = ["cpi", "rust", "cli-rust"]
  mode = "auto"
  scaffold = true

  [clients.cpi]
  output = "onchain/cpi"

  [clients.cli_rust]
  output = "clients/rust-cli"

----- stderr -----
