crates/pina_cli/tests/snapshots/cli_snapshots__idl_help.snap
---
source: crates/pina_cli/tests/cli_snapshots.rs
assertion_line: 205
info:
  program: pina
  args:
    - idl
    - "--help"
---
success: true
exit_code: 0
----- stdout -----
Generate, inspect, and publish canonical Codama IDLs.

Bare invocation preserves local generation: it parses PATH and emits a Codama root-node JSON document. Fetch, diff, and publish manage canonical `idl` metadata for a deployed program through the pinned official Program Metadata client.

Usage: pina idl [OPTIONS] [COMMAND]

Commands:
  generate
          Generate a Codama IDL from local Pina source
  fetch
          Fetch a direct zlib/UTF-8 canonical on-chain IDL for a deployed program
  diff
          Compare a local IDL with canonical on-chain metadata
  publish
          Create or update the canonical on-chain IDL metadata account
  help
          Print this message or the help of the given subcommand(s)

Options:
  -p, --path <DIR>
          Program crate directory containing Cargo.toml and src/lib.rs. Defaults to the current directory

  -o, --output <FILE>
          Write the JSON document to FILE instead of stdout

  -n, --name <NAME>
          Override the program name inferred from Cargo.toml

      --compact
          Emit compact JSON instead of the default pretty-printed JSON

  -h, --help
          Print help (see a summary with '-h')

Examples:
  pina idl
  pina idl --path ./programs/counter_program
  pina idl -p ./programs/counter_program -o ./idls/counter_program.json
  pina idl -p ./programs/counter_program --compact

----- stderr -----
