crates/pina_cli/tests/snapshots/cli_snapshots__idl_success_output.snap
---
source: crates/pina_cli/tests/cli_snapshots.rs
info:
  program: pina
  args:
    - idl
    - "--path"
    - examples/declare_id_program
---
success: true
exit_code: 0
----- stdout -----
{
  "kind": "rootNode",
  "standard": "codama",
  "version": "1.8.0",
  "program": {
    "kind": "programNode",
    "name": "declareIdProgram",
    "publicKey": "Fg6PaFpoGXkYsidMpWTK6W2BeZ7FEfcYkg476zPFsLnS",
    "version": "0.0.0",
    "instructions": [
      {
        "kind": "instructionNode",
        "name": "initialize",
        "arguments": [
          {
            "kind": "instructionArgumentNode",
            "name": "discriminator",
            "defaultValueStrategy": "omitted",
            "type": {
              "kind": "numberTypeNode",
              "format": "u8",
              "endian": "le"
            },
            "defaultValue": {
              "kind": "numberValueNode",
              "number": 0
            }
          }
        ],
        "discriminators": [
          {
            "kind": "constantDiscriminatorNode",
            "offset": 0,
            "constant": {
              "kind": "constantValueNode",
              "type": {
                "kind": "numberTypeNode",
                "format": "u8",
                "endian": "le"
              },
              "value": {
                "kind": "numberValueNode",
                "number": 0
              }
            }
          }
        ],
        "plugins": [
          {
            "kind": "pluginNode",
            "name": "pinaComputeUnits",
            "payload": {
              "limit": 400,
              "measured": 33
            }
          }
        ]
      }
    ]
  }
}

----- stderr -----
[1m[32mIDL generation complete[39m[0m
┌──────────────┬───────┐
│ Component    ┆ Count │
╞══════════════╪═══════╡
│ Instructions ┆ 1     │
│ Accounts     ┆ 0     │
│ PDAs         ┆ 0     │
│ Errors       ┆ 0     │
└──────────────┴───────┘
