crates/pina_cli/tests/snapshots/cli_snapshots__init_help.snap
---
source: crates/pina_cli/tests/cli_snapshots.rs
info:
  program: pina
  args:
    - init
    - "--help"
---
success: true
exit_code: 0
----- stdout -----
Initialize a new Pina program project.

Creates a buildable program scaffold with Pina dependencies, source layout, and a starter instruction. Existing scaffold files are preserved unless --force is supplied.

Usage: pina init [OPTIONS] <NAME>

Arguments:
  <NAME>
          Rust package name for the new program, for example `counter_program`

Options:
  -p, --path <DIR>
          Target directory. Defaults to `./<name>`

      --force
          Overwrite scaffold files that already exist

  -h, --help
          Print help (see a summary with '-h')

Examples:
  pina init counter_program
  pina init counter_program --path ./programs/counter_program
  pina init counter_program --path ./programs/counter_program --force

----- stderr -----
